--- a/src/components/index/intro/form/form.module.scss
+++ b/src/components/index/intro/form/form.module.scss
@@ -72,7 +72,7 @@
   &:focus {
     outline: none !important;
   }
-  z-index: 100;
+  // z-index: 100;
   // font-family: "Montserrat";
   // text-transform: uppercase;
   @media screen and (max-width: 575px) {
