--- a/src/components/shared/UI/Modal/Modal.module.scss
+++ b/src/components/shared/UI/Modal/Modal.module.scss
@@ -38,21 +38,16 @@
     border-radius: 20px; /* roundness of the scroll thumb */
     border: 3px solid $background-color; /* creates padding around scroll thumb */
   }
-  // background: inherit;
 
-  // &:before {
-  //   content: "";
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   right: 0;
-  //   bottom: 0;
-  //   box-shadow: inset 0 0 2000px rgba(255, 255, 255, 1);
-  //   filter: blur(10px);
-  //   background: inherit;
-  // }
-  background-color: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(5px);
+  background-color: rgba(0, 0, 0, 0.75);
+  /* if backdrop support: frosted glass */
+  @supports (
+    (-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))
+  ) {
+    background-color: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+  }
 }
 
 .center {
