Not found page added

--- a/src/hoc/layout/layout.module.scss
+++ b/src/hoc/layout/layout.module.scss
@@ -7,8 +7,8 @@
   // background-color: #4e718d0e;
   // background-color: #090c0f;
   // background-color: #11171c;
-  background-color: #193b61;
-  // background-image: url("../../images/noisy.png");
+  // background-color: #193b61;
+  background-image: url("../../images/noisy.png");
   // background-image: url("../../images/ice.png");
 
   // &:before {
