--- a/src/components/404/notFound.module.scss
+++ b/src/components/404/notFound.module.scss
@@ -22,7 +22,7 @@
 .outer-wrapper {
   // padding-top: $vertical-rhythm * 5;
   padding-bottom: $vertical-rhythm;
-  min-height: 85vh;
+  min-height: 100vh;
   position: relative;
   display: flex;
   align-content: center;
@@ -49,23 +49,32 @@
   display: inline-block;
   padding: 0.46em 1.6em;
   border: 2px solid $button-color;
-  margin: 0;
+  // margin: 0 auto;
   border-radius: 0.12em;
-  border-radius: 6px;
+  border-radius: 500px;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: $body-font;
-  // font-weight: 300;
+  font-family: $header-font;
+  // font-weight: bold;
   color: $button-color;
-  text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+  // text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
   background-color: transparent;
   text-align: center;
   transition: all 0.4s ease-in;
-  box-shadow: inset 0px 0px 0px $button-color;
+  // box-shadow: inset 0px 0px 0px $button-color;
+  // text-transform: uppercase;
+  background-color: $button-color;
+  color: white;
   &:hover {
-    background-color: $button-color;
-    color: rgba(43, 43, 43, 1);
-    box-shadow: inset 0px 0px 150px $button-color;
+    background-color: #10969b;
+    border-color: #10969b;
+    // color: rgba(43, 43, 43, 1);
+    // color: transparent;
+    color: rgba(255, 255, 255, 0.904);
+    background-color: rgb(37, 37, 37);
+    border-color: rgb(37, 37, 37);
+
+    // box-shadow: inset 0px 0px 150px $button-color;
   }
   &:focus {
     outline: none !important;
